--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    
+    <main>
+        <section class="telefone"> 
+        <iframe src="home.html" name="tela" class="tela" frameborder="0"></iframe>
+        </section>
+
+        <section class="rede-sociais">
+            <a href="#" target="tela" ><img src="imagens/logo-home.jpg" alt=""></a><br>
+
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a><br>
+
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a>  <br>
+
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a>   
+        
+        </section>
+    </main>
 </body>
 </html>
