--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </section>
 
         <section class="rede-sociais">
-            <a href="#" target="tela" ><img src="imagens/logo-home.jpg" alt=""></a><br>
+            <a href="home.html" target="tela" ><img src="imagens/logo-home.jpg" alt=""></a><br>
 
             <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a><br>
 
